--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 </main>
     
     <section class="rivers-card">
-        <img class="card-img" src="https://byui-wdd.github.io/wdd130/rafting_images/rivers.jpg" widgt="500" alt="river in forest">
+        <img class="card-img" src="https://byui-wdd.github.io/wdd130/rafting_images/rivers.jpg" alt="river in forest">
         <img class="icon" src="https://byui-wdd.github.io/wdd130/rafting_images/river_icon.png" width="100px"
         ><h3>Rivers</h3>
 
