--- a/index.html
+++ b/index.html
@@ -43,18 +43,18 @@
 
     </section>
     <section class="camping-card">
-        <img class="card-img" src="https://byui-wdd.github.io/wdd130/rafting_images/camping.jpg" widht="500" alt="tent in mountains">
+        <img class="card-img" src="https://byui-wdd.github.io/wdd130/rafting_images/camping.jpg" alt="tent in mountains">
         <img class="icon" src="https://byui-wdd.github.io/wdd130/rafting_images/fire_icon.png" width="100px" alt="fire icon">
         <h3>Camping</h3>
     </section>
     <section class="rapids-card">
-        <img class="card-img" src= "https://byui-wdd.github.io/wdd130/rafting_images/rapids.jpg" widht="500" alt="rafting boat">
+        <img class="card-img" src= "https://byui-wdd.github.io/wdd130/rafting_images/rapids.jpg" alt="rafting boat">
         <img class="icon" src="https://byui-wdd.github.io/wdd130/rafting_images/oars.png" widht="100px"
 
         ><h3>Rapids</h3>
 
     </section>
-         <img class="mountains" src="https://byui-wdd.github.io/wdd130/rafting_images/mountains.jpg" widht="500" alt="Misty mountains">
+         <img class="mountains" src="https://byui-wdd.github.io/wdd130/rafting_images/mountains.jpg" alt="Misty mountains">
     <section class="msg">
         <h2>More Than Just The Thrill</h2>
         <p></p>
