--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     </section>
     <section class="rapids-card">
         <img class="card-img" src= "https://byui-wdd.github.io/wdd130/rafting_images/rapids.jpg" alt="rafting boat">
-        <img class="icon" src="https://byui-wdd.github.io/wdd130/rafting_images/oars.png" widht="100px"
+        <img class="icon" src="https://byui-wdd.github.io/wdd130/rafting_images/oars.png"
 
         ><h3>Rapids</h3>
 
