--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>  
 <header>
     <a id="logo_link" href="index.html">
-        <img src=https://byui-wdd.github.io/wdd130/rafting_images/logo.png styles="200px" alt = "rafting_images">
+        <img src=https://byui-wdd.github.io/wdd130/rafting_images/logo.png alt = "rafting_images">
         </a>
     <nav>
     
