--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     
     <section class="rivers-card">
         <img class="card-img" src="https://byui-wdd.github.io/wdd130/rafting_images/rivers.jpg" alt="river in forest">
-        <img class="icon" src="https://byui-wdd.github.io/wdd130/rafting_images/river_icon.png" width="200px"
+        <img class="icon" src="https://byui-wdd.github.io/wdd130/rafting_images/river_icon.png" alt="river icon">
         ><h3>Rivers</h3>
 
     </section>
