--- a/index.html
+++ b/index.html
@@ -44,12 +44,12 @@
     </section>
     <section class="camping-card">
         <img class="card-img" src="https://byui-wdd.github.io/wdd130/rafting_images/camping.jpg" alt="tent in mountains">
-        <img class="icon" src="https://byui-wdd.github.io/wdd130/rafting_images/fire_icon.png" width="100px" alt="fire icon">
+        <img class="icon" src="https://byui-wdd.github.io/wdd130/rafting_images/fire_icon.png" alt="fire icon">
         <h3>Camping</h3>
     </section>
     <section class="rapids-card">
         <img class="card-img" src= "https://byui-wdd.github.io/wdd130/rafting_images/rapids.jpg" alt="rafting boat">
-        <img class="icon" src="https://byui-wdd.github.io/wdd130/rafting_images/oars.png"
+        <img class="icon" src="https://byui-wdd.github.io/wdd130/rafting_images/oars.png" alt="oars icon">
 
         ><h3>Rapids</h3>
 
@@ -58,12 +58,6 @@
     <section class="msg">
         <h2>More Than Just The Thrill</h2>
         <p></p>
-        <h4>The woods are lovely, dark and deep,<p></p>
-            But I have promises to keep,<p></p>
-            And miles to go before I sleep,<p></p>
-            And miles to go before I sleep.</h4>
-            <h4>“Stopping by Woods on a Snowy Evening" - Robert Frost</h4>
-
         <p>Enjoy the breathtaking scenery. From valleys, meadows, canyons, and high peaks; 
         <p> It's way more than just the rapids. It's a great way to get away from it all and relax amongst all the beauty of the great outdoors.</p>
         <a class='join' href="https://www.byupathway.org/admissions">Join Us</a>
