--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
     </section>
 </div>
     <main class="home-grid">
+
+</main>
     
     <section class="rivers-card">
         <img class="card-img" src="https://byui-wdd.github.io/wdd130/rafting_images/rivers.jpg" alt="river in forest">
@@ -76,4 +78,5 @@
         </a>
     </div>
 </footer>
+</main>
 </body>
